--- a/.github/workflows/redoc.yml
+++ b/.github/workflows/redoc.yml
@@ -51,6 +51,4 @@ jobs:
       env:
         S3_UPLOAD_BUCKET: ${{ secrets.S3_BUCKET }}
       run: |
-        aws s3 cp *.html s3://$S3_BUCKET
-
-
+        aws s3 cp \*.html s3://$S3_BUCKET
