--- a/.github/workflows/redoc.yml
+++ b/.github/workflows/redoc.yml
@@ -15,30 +15,13 @@ jobs:
 
     steps:
 
-    - uses: actions/checkout@master
-      with:
-        persist-credentials: false
-        fetch-depth: 0
-
     - name: Install redoc
       run: sudo npm install -g redoc-cli
 
     - name: Run a one-line script
       run: |
         cd ./doc/api
-        find . -name "*.yaml" | sed s/\.yaml// | xargs -I {} redoc-cli bundle {}.yaml --output {}.html
-
-    - name: Commit files
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add ./doc/api
-        git commit -m "Redoc自動生成" -a
-
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        find . -name "*.yaml" | sed s/\.yaml// | xargs -I {} redoc-cli bundle {}.yaml --output /tmp/{}.html
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -49,6 +32,6 @@ jobs:
 
     - name: Copy HTML file to S3 bucket
       env:
-        S3_UPLOAD_BUCKET: ${{ secrets.S3_BUCKET }}
+        S3_BUCKET: ${{ secrets.S3_BUCKET }}
       run: |
-        find ./doc/api -name "*.html" | xargs -I {} aws s3 cp {} s3://$S3_BUCKET
+        find /tmp/ -name "*.html" | xargs -I {} aws s3 cp {} s3://$S3_BUCKET
