--- a/.github/workflows/redoc.yml
+++ b/.github/workflows/redoc.yml
@@ -15,6 +15,11 @@ jobs:
 
     steps:
 
+    - uses: actions/checkout@master
+      with:
+        persist-credentials: false
+        fetch-depth: 0
+
     - name: Install redoc
       run: sudo npm install -g redoc-cli
 
